src/test/ui/span/issue28498-reject-ex1.nll.stderr
error[E0597]: `foo.data` does not live long enough
  --> $DIR/issue28498-reject-ex1.rs:44:29
   |
LL |     foo.data[0].1.set(Some(&foo.data[1]));
   |                             ^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | -
   | |
   | borrowed value only lives until here
   | borrow later used here, when `foo` is dropped
   |
   = note: values in a scope are dropped in the opposite order they are defined

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
